<resources>
    <string name="app_name">TokopediaClone</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="yosua_putra_wisesa_haloho">Yosua Putra Wisesa Haloho</string>
    <string name="_0812345">0812345</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="edit">Edit</string>
    <string name="register">Register</string>
    <string name="simpan">Simpan</string>
    <string name="logout">Logout</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="inisial">YH</string>
    <string name="password">Password</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="dengan_mendaftar_saya_menyetujui">Dengan mendaftar, saya menyetujui</string>
    <string name="serta">serta</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="cari_produk_di_sini">Cari produk di sini</string>
    <string name="dikirim_ke">Dikirim ke</string>
    <string name="rewards">Rewards</string>
    <string name="gopay">GoPay</string>
    <string name="category_name">Category name</string>
</resources>